# library

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  makefile  setup.cfg
.github/workflows/: conf.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/alembic/versions/: 90f23458f2b8_add_role_to_users_table.py  91979b40eb38_create_users_table.py
backend/app/api/api_v1/routers/: auth.py  users.py
backend/app/api/api_v1/routers/tests/: test_auth.py  test_users.py
backend/app/core/: config.py
backend/app/db/: crud.py  models.py  schemas.py
scripts/: build-dev.sh  build-prod.sh  test.sh
