[tool.poetry]
name = "curas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.6"
amqp = "^5.0.9"
appnope = "^0.1.2"
attrs = "^21.4.0"
Authlib = "^0.15.5"
backcall = "^0.2.0"
bcrypt = "^3.2.0"
billiard = "^3.6.4"
celery = "^5.2.3"
certifi = "^2021.10.8"
cffi = "^1.15.0"
chardet = "^4.0.0"
click = "^8.0.4"
click-didyoumean = "^0.3.0"
click-repl = "^0.2.0"
cryptography = "^36.0.1"
decorator = "^5.1.1"
fastapi = "^0.74.1"
h11 = "^0.13.0"
idna = "^3.3"
iniconfig = "^1.1.1"
ipython = "^8.0.1"
itsdangerous = "^2.1.0"
jedi = "^0.18.1"
Jinja2 = "^3.0.3"
kombu = "^5.2.3"
Mako = "^1.1.6"
MarkupSafe = "^2.1.0"
matplotlib-inline = "^0.1.3"
packaging = "^21.3"
parso = "^0.8.3"
passlib = "^1.7.4"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pluggy = "^1.0.0"
prompt-toolkit = "^3.0.28"
psycopg2-binary = "^2.9.3"
ptyprocess = "^0.7.0"
py = "^1.11.0"
pycparser = "^2.21"
pydantic = "^1.9.0"
Pygments = "^2.11.2"
PyJWT = "^2.3.0"
pyparsing = "^3.0.7"
pytest = "^7.0.1"
python-dateutil = "^2.8.2"
python-editor = "^1.0.4"
python-multipart = "^0.0.5"
pytz = "^2021.3"
redis = "^4.1.4"
requests = "^2.27.1"
rfc3986 = "^2.0.0"
six = "^1.16.0"
sniffio = "^1.2.0"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
toml = "^0.10.2"
traitlets = "^5.1.1"
typing-extensions = "^4.1.1"
urllib3 = "^1.26.8"
uvicorn = "^0.17.5"
vine = "^5.0.0"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
